# spectrum_utils

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  codecov.yml  environment.yml  main.py  postBuild  profile.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: black.yml  lint.yml  publish.yml  tests.yml
docs/: Makefile  api.md  conf.py  contact.md  index.md  index.rst  install.md  mirror_iplot.json  modules.rst  plotting.md  processing.md  runtime.md  spectrum_iplot.json  spectrum_utils.rst
docs/api/: spectrum_utils.iplot.rst  spectrum_utils.plot.rst  spectrum_utils.rst  spectrum_utils.spectrum.rst  spectrum_utils.utils.rst
docs/src/: annotating.md  api.md  conf.py  contact.md  index.md  install.md  iplot_mirror.json  iplot_spectrum.json  mirror_iplot.json  plotting.md  processing.md  quickstart.md  runtime.md  spectra.mgf  spectrum_iplot.json
notebooks/: mzspec:PXD004732:01650b_BC2-TUM_first_pool_53_01_01-3xHCD-1h-R2:scan:41840.mgf  preprocess_and_plot.ipynb  quickstart.ipynb  spectra.mgf
spectrum_utils/: __init__.py  fragment_annotation.py  iplot.py  monosaccharide.lark  plot.py  proforma.ebnf  proforma.py  proforma_simple.ebnf  spectrum.py  utils.py
spectrum_utils/tests/: spectrum_test.py
tests/: fragment_annotation_test.py  proforma_test.py  spectrum_test.py
