[metadata]
name = spectrum_utils
author = Wout Bittremieux
author_email = wbittremieux@health.ucsd.edu
description =  Mass spectrometry utility functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bittremieux/spectrum_utils
project_urls =
    Documentation = https://spectrum-utils.readthedocs.io/
    Bug Tracker = https://github.com/bittremieux/spectrum_utils/issues
license = Apache 2.0
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib
    numba>=0.47
    numpy
    pyteomics


[options.extras_require]
dev =
    flake8
docs =
    numpydoc>=1.1.0
    sphinx>=3.5.3
    sphinx-rtd-theme>=0.5.1
    recommonmark>=0.7.1
iplot =
    altair
    pandas
