[metadata]
name = spectrum_utils
author = Wout Bittremieux
author_email = wout.bittremieux@uantwerpen.be
description =  Mass spectrometry utility functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bittremieux/spectrum_utils
project_urls =
    Documentation = https://spectrum-utils.readthedocs.io/
    Bug Tracker = https://github.com/bittremieux/spectrum_utils/issues
license = Apache 2.0
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    fastobo
    lark>=1.0
    matplotlib>=3.5
    numba>=0.57
    numpy
    platformdirs
    pyteomics>=4.5

[options.extras_require]
dev =
    pytest
    pytest-cov
    ruff
docs =
    myst-parser
    numpydoc>=1.1.0
    sphinx>=3.5.3
    sphinx-rtd-theme>=0.5.1
    sphinx_markdown_tables
iplot =
    altair
    pandas
